--- a/index.html
+++ b/index.html
@@ -7,11 +7,57 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <title>MARCA - Diario online líder en información deportiva</title>
+        <style>
+        </style>
     </head>
     <body>
         <!-- TOPBAR -->
         <div class="container-fluid">
             <div class="container">
+                <div class="row">
+                    <div class="col-md-4 d-flex">
+                        <div class="part w-30 d-inline-flex">
+                            <a href="" class="d-flex align-items-center">
+                                <img src="https://e04-marca.uecdn.es/imagenes/2018/09/13/portada/marca_papel/1536706773_extras_primera_papel_0.jpg" alt="" class="d-inline-flex">
+                                <p class="d-inline-flex align-self-center"><small><strong>La portada de hoy</strong></small></p>
+                            </a>
+                        </div>
+                        <div class="part w-30 d-inline-flex">
+                            <a href="" class="d-flex align-items-center">
+                                <img src="https://e04-marca.uecdn.es/imagenes/2018/09/13/portada/marca_papel/1536706773_extras_primera_papel_0.jpg" alt="" class="d-inline-flex">
+                                <p class="d-inline-flex"><small><strong>Radio MARCA</strong></small></p>
+                            </a>
+                        </div>
+                        <div class="part w-30 d-inline-flex">
+                            <a href="" class="d-flex align-items-center">
+                                <img src="https://e00-marca.uecdn.es/assets/v12/img/laliga_fantasy.svg" alt="" class="d-inline-flex">
+                                <p class="d-inline-flex"><small><strong>Laliga Fantasy MARCA</strong></small></p>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <img src="images/logo.png" alt="" style="width: 50%">
+                    </div>
+                    <div class="col-md-4 d-flex align-items-center">
+                        <div class="dropdown w-30 d-inline-flex">
+                            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                <i class="iconsvg inconsvg--flag-es-a"></i>
+                                ES
+                                <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                                <li><a href="#">Action</a></li>
+                                <li><a href="#">Another action</a></li>
+                                <li><a href="#">Something else here</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li><a href="#">Separated link</a></li>
+                            </ul>
+                        </div>
+                        <a class="btn btn-danger" href="#" role="button">Suscríbete</a>
+                        <a class="btn btn-danger btn-outline-light text-danger" href="#" role="button">Iniciar sesión</a>
+                        
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -83,15 +129,73 @@
         <!-- TEAMBAR -->
         <div class="container-fluid">
             <div class="container">
+                <div class="row bg-light">
+                    <div class="col-md-4">
+                        <ul>
+                            <li>
+                                <a href="#"><img src="https://e00-marca.uecdn.es/assets/v12/img/sprites/teams-primera-s6ddcfcebca.png'" alt=""></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
 
         <div class="container">
-            <div class="row m-3">
-                <div class="col-md-10 col-sm-12 col-0">
-                    <a href="">
+            <!-- Ad -->
+            <div class="row m-3 d-flex justify-content-center">
+                <div class="col-md-10 col-sm-12 col-0 d-flex justify-content-center">
+                    <a href="" class="">
                         <img src="https://static.caliente.mx/online/display?promoId=56816251" alt="">
                     </a>
+                </div>
+            </div>
+
+            <!-- Section title -->
+            <div class="row">
+                <div class="col-9 d-inline-flex">
+                    <h2>Agenda</h2>
+                    <div class="d-inline-flex">
+                        <div class="red">En directo</div>
+                        <div class="gray">Todas las noticias<br><strong>Últimas horas</strong></div>
+                    </div>
+                    <div class="d-inline-flex">
+                        <div class="red">Lo mejor del día</div>
+                        <div class="gray">Agenda<br><strong>Jueves 23</strong></div>
+                    </div>
+                </div>
+                <div class="col-3 d-flex justify-content-end">
+                    <div class="dropdown">
+                        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                            Dropdown
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                            <li><a href="#">Action</a></li>
+                            <li><a href="#">Another action</a></li>
+                            <li><a href="#">Something else here</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">Separated link</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Main news -->
+            <div class="row">
+                <div class="col-8">
+                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img class="d-block w-100" src="https://e00-marca.uecdn.es/assets/multimedia/imagenes/2018/09/11/15366668354725.jpg" alt="First slide">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-caption d-none d-md-block w-100 h-100">
+                        <div class="div" style="color: cyan">CHAMPIONS</div>
+                        <p>Descubre a los ocho grandes favoritos</p>
+                        <a href="#">Fenati: "Dejo las motos, no correré nunca más"</a>
+                    </div>                                
                 </div>
             </div>
         </div>
